--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ cmdstanpy==1.2.5
 comm==0.2.3
 contourpy==1.3.3
 cycler==0.12.1
+Cython==3.1.3
 debugpy==1.8.16
 decorator==5.2.1
 defusedxml==0.7.1
@@ -102,6 +103,7 @@ pexpect==4.9.0
 pillow==11.3.0
 platformdirs==4.3.8
 plotly==6.3.0
+pmdarima==2.0.4
 prometheus_client==0.22.1
 prompt_toolkit==3.0.51
 prophet==1.1.7
